force-app/main/default/objects/AccountContactRelation/fields/GlobalMigrationKey__c.field-meta.xml
<CustomField>
    <fullName>GlobalMigrationKey__c</fullName>
    <description>Chiave Globale Migrazione</description>
    <externalId>true</externalId>
    <label>Chiave Globale Migrazione</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>