force-app/main/default/objects/AccountContactRelation/fields/IsManagerSOL__c.field-meta.xml
<CustomField>
    <fullName>IsManagerSOL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se selezionato indica che il contatto puo gestire l&apos;account sul Portale SOL</description>
    <label>Manager SOL</label>
    <type>Checkbox</type>
</CustomField>