force-app/main/default/objects/AccountContactRelation/fields/SolEndDate__c.field-meta.xml
<CustomField>
    <fullName>SolEndDate__c</fullName>
    <label>Data fine SOL</label>
    <type>Date</type>
</CustomField>