force-app/main/default/objects/AccountContactRelation/fields/SolStartDate__c.field-meta.xml
<CustomField>
    <fullName>SolStartDate__c</fullName>
    <label>SolStartDate</label>
    <type>Date</type>
</CustomField>