force-app/main/default/objects/AccountContactRelation/validationRules/HDT_VR_Community.validationRule-meta.xml
<ValidationRule>
    <fullName>HDT_VR_Community</fullName>
    <active>true</active>
    <errorConditionFormula>IF( $Profile.Name==&apos;Hera Door2Door Partner User&apos;, true,   IF( $Profile.Name==&apos;Hera Teleseller Partner User&apos;, true, false) )</errorConditionFormula>
    <errorMessage>Operazione non consentita</errorMessage>
</ValidationRule>